_k8s/base/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pratiba-nodeport
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
