_k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pratiba
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: pratiba-nodeport
              servicePort: 80
